# gemini-fastapi

./: .gitignore  README.md  alembic.ini  db.py  gemini.py  gemini_queries_controller.py  google_cloud.py  image_util.py  main.py  main_test.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_02_02_2010-5b2736c01d27_create_user_queries_table.py
static/: index.html
